<resources>
    <string name="app_name">在线考试系统</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="username">用户ID</string>
    <string name="infoname">姓名</string>
    <string name="password">密码</string>
    <string name="password_confirm">确认密码</string>
    <string name="telno">电话</string>
    <string name="login_text">登录</string>
    <string name="logout_text">退出</string>
    <string name="register_text">注册</string>
    <string name="test">考试</string>
    <string name="others">其他</string>
    <string name="Score">查分</string>
    <string name="pick">选课</string>
    <string name="setting">修改信息</string>
    <string name="editquestion">题库</string>
    <string name="editstudent">查看学生成绩</string>
    <string name="submit">提交</string>
    <string name="no_account">没有账号？ 请注册</string>
    <string name="have_account">已有账号？ 请登录</string>
    <string name="title_activity_main">在线考试系统</string>

    <string name="schoolid">学号：</string>
    <string name="teacherid">教师编号：</string>
    <string name="name">姓名：</string>
    <string name="phonenumeber">电话：</string>
    <string name="psd">密码：</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_edit_exam">EditExamActivity</string>
    <string name="title_activity_edit_question">EditQuestionActivity</string>
    <string name="title_activity_edit_student">EditStudentActivity</string>
    <string name="title_activity_update_teacherinfo">UpdateTeacherinfoActivity</string>
</resources>
