<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_editquestion"
            android:icon="@mipmap/ic_test"
            android:title="@string/editquestion" />
    </group>

    <item android:title="@string/others">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/nav_editstudent"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/editstudent" />
                <item
                    android:id="@+id/nav_setting"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/setting" />
            </group>
        </menu>
    </item>

</menu>
