<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#232228"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.onlineexam.Activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:layout_marginTop="80sp"
            android:text="@string/app_name"
            android:textColor="#fff"
            android:textSize="30sp"
            android:typeface="serif" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:text="@string/login"
            android:textColor="#fff"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginTop="30sp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="#19181D"
                android:src="@drawable/ic_username" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:background="#19181D"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="number"
                android:paddingLeft="10sp"
                android:selectAllOnFocus="false"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginTop="10sp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="#19181D"
                android:src="@drawable/ic_password" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:background="#19181D"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="10sp"
                android:selectAllOnFocus="false"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:textSize="20sp" />

        </LinearLayout>

        <Button
            android:id="@+id/Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:background="@drawable/shape"
            android:text="@string/login_text"
            android:textColor="#fff"
            android:textSize="20sp" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_account"
            android:textAlignment="center"
            android:textColor="#fff" />
    </RelativeLayout>
</RelativeLayout>
